--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.16.0",
+    "react-spinners": "^0.15.0",
     "sockjs-client": "^1.6.1",
     "zustand": "^5.0.3"
   },
